--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@
         <a href="{{ '/' | absolute_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
+        <h2>{{ page.title }}</h2>
         {% if site.github.is_project_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
@@ -37,6 +38,8 @@
         </section>
 
         <aside id="sidebar">
+          <h1>{{ page.title }}</h1>
+
           {% include allejo/toc.html html=content %}
           
           {% if site.show_downloads %}
