Add title to main page on submenu

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,6 +38,8 @@
         </section>
 
         <aside id="sidebar">
+          <h1>{{ page.title }}</h1>
+          
           {% include allejo/toc.html html=content %}
           
           <p>Cette page a été généré par <a href="https://pages.github.com">GitHub Pages</a>.</p>
